--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,10 +6,12 @@
     <title>Mytify</title> <!--my spotify kinda hhhehe-->
 </head>
 <body>
-  before
+
   <br>
+  <%- include("../partials/header.ejs")  %>
+  <%- include("../partials/errorMessage.ejs")  %>
   <%- body %>
   <br>
-  after
+
 </body>
 </html>
